--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./public/huella.png" type="image/x-icon">
+  <script src="index.ts"></script>
   <title>Document</title>
 </head>
 
 <body>
-
+  <header></header>
+  <main></main>
 </body>
 
 </html>
