--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./public/huella.png" type="image/x-icon">
-  <script src="index.ts"></script>
+  <link rel="shortcut icon" href="/huella.png" type="image/x-icon">
+  <script type="module" src="./src/index.ts"></script>
   <title>Document</title>
 </head>
 
